tests: Fix reflector sequence test
Use the proper method to determine if the variable is a list or tuple.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tests/reflector.py.in
+++ b/tests/reflector.py.in
@@ -41,7 +41,7 @@ class Reflector:
     def __init__(self, o, iostrs, trace = False, close_on_no_con = False):
         self.o = o
         self.accs = []
-        if hasattr(iostrs, "__iter__"):
+        if type(iostrs) is list or type(iostrs) is tuple:
             for i in iostrs:
                 a = gensio.gensio_accepter(o, i, self)
                 self.accs.append(a)
