tools: Fix makefile handling of greflector
For some reason $< wasn't working on BSD, just put the value into the
copy.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -12,7 +12,7 @@ bin_SCRIPTS = @GTLSSYNC@ greflector
 EXTRA_SCRIPTS = gtlssync
 
 greflector: $(top_builddir)/tests/reflector.py
-	cp $< $@
+	cp $(top_builddir)/tests/reflector.py $@
 
 do_subst = sed -e 's,[@]SYSCONFDIR[@],$(sysconfdir),g'
 
