--- a/swig/python/Makefile.am
+++ b/swig/python/Makefile.am
@@ -18,12 +18,12 @@ libgensio_python_swig_la_LIBADD = $(PYTHON_LIBS) \
 
 noinst_HEADERS = gensio_python.h python_swig_internals.h
 
-gensio_wrap.c gensio.py: $(top_srcdir)/swig/gensio.i \
+gensio_wrap.c gensio.py: $(top_srcdir)/swig/gensio.swig \
 		$(top_srcdir)/swig/python/gensio_python.h \
 		$(top_srcdir)/swig/python/gensio_python.i
 	$(SWIG) $(DEFS) -python $(PYTHON_SWIG_FLAGS) -o gensio_wrap.c \
 		-I$(top_srcdir)/swig/python -I$(top_srcdir)/include \
-		-I$(top_srcdir)/swig/include $(top_srcdir)/swig/gensio.i
+		-I$(top_srcdir)/swig/include $(top_srcdir)/swig/gensio.swig
 
 EXTRA_DIST = gensio_python.i CMakeLists.txt libgensio_python_swig.pc.in
 
