swig:python: Fix a gensio_python.i->gensio_langinfo.i
It was missed earlier.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/swig/python/Makefile.am
+++ b/swig/python/Makefile.am
@@ -25,7 +25,7 @@ gensio_wrap.c gensio.py: $(top_srcdir)/swig/gensio.swig \
 		-I$(top_srcdir)/swig/python -I$(top_srcdir)/include \
 		-I$(top_srcdir)/swig/include $(top_srcdir)/swig/gensio.swig
 
-EXTRA_DIST = gensio_python.i CMakeLists.txt libgensio_python_swig.pc.in
+EXTRA_DIST = gensio_langinfo.i CMakeLists.txt libgensio_python_swig.pc.in
 
 pkgconfigexecdir = $(libdir)/pkgconfig
 pkgconfigexec_DATA = libgensio_python_swig.pc
