swig: Move into the c++ directory
We will start using C++ constructs in swig to make it easier to support
other languages.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,13 +1,13 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = lib $(CPLUSPLUS_DIR) include $(SWIG_DIR) $(GLIB_DIR) $(TCL_DIR) \
+SUBDIRS = lib $(CPLUSPLUS_DIR) include $(GLIB_DIR) $(TCL_DIR) \
 	tests tools examples
 if INSTALL_DOC
 SUBDIRS += man
 endif
 
-DIST_SUBDIRS = lib c++ include swig glib tcl tests tools examples man
+DIST_SUBDIRS = lib c++ include glib tcl tests tools examples man
 
 EXTRA_DIST = README.rst reconf CMakeLists.txt config.h.cmake
 
