--- a/c++/Makefile.am
+++ b/c++/Makefile.am
@@ -1,2 +1,4 @@
 
-SUBDIRS = include lib tests examples
+SUBDIRS = include lib $(SWIG_DIR) tests examples
+
+DIST_SUBDIRS = include lib swig tests examples
