swig: Use the c++ compiler to compile the gensio wrapper
Have swig generate c++ code and then compile that.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/swig/python/Makefile.am
+++ b/c++/swig/python/Makefile.am
@@ -1,5 +1,5 @@
 
-AM_CFLAGS = $(PYTHON_CPPFLAGS) \
+AM_CPPFLAGS = $(PYTHON_CPPFLAGS) \
 	    -I$(top_srcdir)/include \
 	    -I$(top_builddir)/include \
 	    -I$(top_srcdir) -I$(top_srcdir)/c++/swig/include \
@@ -18,12 +18,12 @@ libgensio_python_swig_la_LIBADD = $(PYTHON_LIBS) \
 
 noinst_HEADERS = gensio_python.h python_swig_internals.h
 
-gensio_wrap.c gensio.py: $(top_srcdir)/c++/swig/gensio.swig \
+gensio_wrap.cc gensio.py: $(top_srcdir)/c++/swig/gensio.swig \
 		$(top_srcdir)/c++/swig/python/gensio_python.h \
 		$(top_srcdir)/c++/swig/python/gensio_langinfo.i
-	$(SWIG) $(DEFS) -python $(PYTHON_SWIG_FLAGS) -o gensio_wrap.c \
+	$(SWIG) $(DEFS) -python $(PYTHON_SWIG_FLAGS) -o gensio_wrap.cc -c++ \
 		-I$(top_srcdir)/c++/swig/python -I$(top_srcdir)/include \
-		-I$(top_srcdir)/c++/swig/include \
+		-I$(top_builddir)/include -I$(top_srcdir)/c++/swig/include \
 		$(top_srcdir)/c++/swig/gensio.swig
 
 EXTRA_DIST = gensio_langinfo.i CMakeLists.txt libgensio_python_swig.pc.in
@@ -31,13 +31,13 @@ EXTRA_DIST = gensio_langinfo.i CMakeLists.txt libgensio_python_swig.pc.in
 pkgconfigexecdir = $(libdir)/pkgconfig
 pkgconfigexec_DATA = libgensio_python_swig.pc
 
-nodist__gensio_la_SOURCES = gensio_wrap.c
+nodist__gensio_la_SOURCES = gensio_wrap.cc
 _gensio_la_LIBADD = $(top_builddir)/lib/libgensio.la $(OPENSSL_LIBS) \
 		$(PYTHON_LIBS) libgensio_python_swig.la
 _gensio_la_LDFLAGS = -module -avoid-version $(OPENSSL_LDFLAGS) -no-undefined
 
 clean-local:
-	rm -rf __pycache__ gensio_wrap.c gensio.py
+	rm -rf __pycache__ gensio_wrap.cc gensio.py
 
 install-exec-local: _gensio.la gensio.py
 	$(INSTALL) -d $(DESTDIR)$(PYTHON_INSTALL_DIR)
