c++: Move gensio-specific classes, change read vector
Remove all the classes that we don't normally need, especially for swig
code.

Make a simple non-allocating vector for the read event callback to avoid
allocating data in that case.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/include/gensio/Makefile.am
+++ b/c++/include/gensio/Makefile.am
@@ -1,4 +1,4 @@
 
-pkginclude_HEADERS = gensio gensio_dllvisibility
+pkginclude_HEADERS = gensio gensio_classes gensio_dllvisibility
 
 #EXTRA_DIST = CMakeLists.txt
