--- a/c++/Makefile.am
+++ b/c++/Makefile.am
@@ -1,6 +1,6 @@
 
-SUBDIRS = include lib tests examples
+SUBDIRS = include lib $(SWIG_DIR) tests examples
 
-DIST_SUBDIRS = include lib tests examples
+DIST_SUBDIRS = include lib swig tests examples
 
 EXTRA_DIST = CMakeLists.txt
