swig: Fix the python move back
It was fairly botched, and rename gensio.swig back to gensio.i.  That
was a bad idea.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/Makefile.am
+++ b/c++/Makefile.am
@@ -1,4 +1,5 @@
 
-SUBDIRS = include lib $(SWIG_DIR) tests examples
+SUBDIRS = include lib tests examples
 
-DIST_SUBDIRS = include lib swig tests examples
+DIST_SUBDIRS = include lib tests examples
+
