Make sure CMakeLists.h is in EXTRA_DIST in all makefiles
So it gets propagated along properly.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/lib/Makefile.am
+++ b/c++/lib/Makefile.am
@@ -7,7 +7,7 @@ libgensiocpp_la_SOURCES = gensio.cc
 libgensiocpp_la_LIBADD = $(top_builddir)/lib/libgensio.la @OPENSSL_LIBS@
 libgensiocpp_la_LDFLAGS = -no-undefined -rpath $(libdir)
 
-EXTRA_DIST = libgensiocpp.pc.in
+EXTRA_DIST = libgensiocpp.pc.in CMakeLists.txt
 
 # This variable must have 'exec' in its name, in order to be installed
 # by 'install-exec' target (instead of default 'install-data')
