--- a/tcl/c++/tests/Makefile.am
+++ b/tcl/c++/tests/Makefile.am
@@ -13,3 +13,5 @@ basic_tcl_test_LDADD = $(top_builddir)/lib/libgensio.la \
 	$(TCL_LIBS) $(OPENSSL_LIBS)
 
 check_PROGRAMS = basic_tcl_test
+
+EXTRA_DIST = CMakeLists.txt
