glib:tcl: Get rid of unnecesary include directory
It's not used in that directory.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/glib/Makefile.am
+++ b/glib/Makefile.am
@@ -1,6 +1,5 @@
 
-AM_CFLAGS = -DBUILDING_GENSIOGLIB_DLL -I$(top_srcdir)/glib/include \
-	 -I$(top_srcdir)/c++/swig/include
+AM_CFLAGS = -DBUILDING_GENSIOGLIB_DLL -I$(top_srcdir)/glib/include
 
 lib_LTLIBRARIES = libgensioglib.la
 
