Get cmake basically working
Usual rot happens if it's not tested often.  Fix issues that came in
recently.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,17 +50,18 @@ if(ENABLE_EPOLL)
   CHECK_INCLUDE_FILE(sys/epoll.h HAVE_EPOLL_PWAIT)
 endif()
 
-option(ENABLE_GLIB "Enable GLIB support" UNIX)
+option(ENABLE_GLIB "Enable GLIB support" ON)
 if(ENABLE_GLIB)
   pkg_check_modules(GLIB glib-2.0)
   if(GLIB_FOUND)
     set(HAVE_GLIB ON)
     set(GLIB_LIB gensioglib)
+    set(GLIB_LIBS -lglib-2.0)
   endif()
 endif()
 
 set(TCL_LIBS )
-option(ENABLE_TCL "Enable TCL support" UNIX)
+option(ENABLE_TCL "Enable TCL support" ON)
 if(ENABLE_TCL)
   if(TCL_FOUND)
     set(HAVE_TCL ON)
