--- a/glib/c++/tests/CMakeLists.txt
+++ b/glib/c++/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ include_directories("${PROJECT_SOURCE_DIR}/c++/include"
   )
 
 add_executable(basic_glib_test basic_glib_test.cc)
-target_link_libraries(basic_glib_test gensio gensiocpp gensioglib)
+target_link_libraries(basic_glib_test gensio gensiocpp gensioglib ${GLIB_LIBS})
 
 add_test(NAME basic_glib_test
          COMMAND basic_glib_test)
