--- a/tcl/c++/tests/CMakeLists.txt
+++ b/tcl/c++/tests/CMakeLists.txt
@@ -5,9 +5,9 @@ include_directories("${PROJECT_SOURCE_DIR}/c++/include"
   "${PROJECT_SOURCE_DIR}/tcl/c++/include"
   )
 
-add_executable(basic_tcl basic_tcl.cc)
-target_link_libraries(basic_tcl gensio gensiocpp gensiotcl)
+add_executable(basic_tcl_test basic_tcl_test.cc)
+target_link_libraries(basic_tcl_test gensio gensiocpp gensiotcl)
 
-add_test(NAME basic_tcl
-         COMMAND basic_tcl)
-set_tests_properties(basic_tcl PROPERTIES SKIP_RETURN_CODE 77)
+add_test(NAME basic_tcl_test
+         COMMAND basic_tcl_test)
+set_tests_properties(basic_tcl_test PROPERTIES SKIP_RETURN_CODE 77)
