--- a/c++/swig/Makefile.am
+++ b/c++/swig/Makefile.am
@@ -1,5 +1,5 @@
 
 EXTRA_DIST = CMakeLists.txt
 
-SUBDIRS = . $(PYGENSIO_DIR)
-DIST_SUBDIRS = pygensio
+SUBDIRS = . include $(PYGENSIO_DIR)
+DIST_SUBDIRS = include pygensio
