c++: Fix up various makefile includes
Add a base definition for the c++ include directory and take out a bunch
of unnecessary include directories in the makefiles.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -11,6 +11,8 @@ AC_PROG_CXX
 AM_PROG_AR
 LT_INIT
 
+CXXFLAGS="$CXXFLAGS -I\$(top_srcdir)/c++/include"
+
 # defaults
 uucp_locking_flag=yes
 UUCP_LOCK_DIR=/var/spool/lock
