go: Add initial go language support
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/swig/Makefile.am
+++ b/c++/swig/Makefile.am
@@ -1,5 +1,5 @@
 
 EXTRA_DIST = CMakeLists.txt
 
-SUBDIRS = . include $(PYGENSIO_DIR)
-DIST_SUBDIRS = include pygensio
+SUBDIRS = . include $(PYGENSIO_DIR) go
+DIST_SUBDIRS = include pygensio go
