c++:swig:pygensio: Make log handling available for others
Remove the python log handling class and make it available for glib and
tcl Os_Funcs handlers.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/swig/pygensio/Makefile.am
+++ b/c++/swig/pygensio/Makefile.am
@@ -1,5 +1,7 @@
 
-AM_CPPFLAGS = $(PYTHON_CPPFLAGS)
+SUBDIRS = include
+
+AM_CPPFLAGS = $(PYTHON_CPPFLAGS) -I$(top_srcdir)/c++/swig/pygensio/include
 
 pythonlibdir=$(PYTHON_INSTALL_LIB_DIR)
 pythonlib_LTLIBRARIES = _pygensio.la
