c++:swig:pygensio:tests: Add a crypto interface test
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/swig/pygensio/tests/Makefile.am
+++ b/c++/swig/pygensio/tests/Makefile.am
@@ -1,7 +1,7 @@
 
 LOG_COMPILER = $(SHELL) $(builddir)/runtest
 
-TESTS = test_basic.py test_ax25.py
+TESTS = test_basic.py test_ax25.py test_crypto.py
 
 EXTRA_DIST = testbase.py $(TESTS)
 
