c++:swig:pygensio:tests: Add serial interface tests
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/swig/pygensio/tests/Makefile.am
+++ b/c++/swig/pygensio/tests/Makefile.am
@@ -1,7 +1,8 @@
 
 LOG_COMPILER = $(SHELL) $(builddir)/runtest
 
-TESTS = test_basic.py test_ax25.py test_crypto.py test_mdns.py
+TESTS = test_basic.py test_ax25.py test_crypto.py test_mdns.py \
+	test_serial.py
 
 EXTRA_DIST = testbase.py $(TESTS)
 
