tests: Fix runtest
It would only report a failure if the last test failed.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/swig/pygensio/tests/runtest.in
+++ b/c++/swig/pygensio/tests/runtest.in
@@ -82,6 +82,9 @@ else
     for i in default @TCL_DIR@ @GLIB_DIR@; do
 	echo "Testing with '$i'"
 	export GENSIO_TEST_OS_HANDLER=$i
-	${RUNPREFIX} ${TEST} $*
+	if ! ${RUNPREFIX} ${TEST} $*; then
+	    # A test failed, exit
+	    exit 1
+	fi
     done
 fi
