c++: Add a example telnet client
Demonstrate making a connection and using GensioW.

Also add an & operator to GensioW and clean up some docs.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/examples/Makefile.am
+++ b/c++/examples/Makefile.am
@@ -1,15 +1,21 @@
 
 AM_CPPFLAGS = -I$(top_srcdir)/c++/include
 
-noinst_PROGRAMS = telnet_server mdns
+noinst_PROGRAMS = telnet_server telnet_client mdns
 
 telnet_server_SOURCES = telnet_server.cc
-
-mdns_SOURCES = mdns.cc
 
 telnet_server_LDADD = $(top_builddir)/lib/libgensio.la \
 	$(top_builddir)/c++/lib/libgensiocpp.la \
 	$(OPENSSL_LIBS)
+
+telnet_client_SOURCES = telnet_client.cc
+
+telnet_client_LDADD = $(top_builddir)/lib/libgensio.la \
+	$(top_builddir)/c++/lib/libgensiocpp.la \
+	$(OPENSSL_LIBS)
+
+mdns_SOURCES = mdns.cc
 
 mdns_LDADD = $(top_builddir)/lib/libgensio.la \
 	$(top_builddir)/c++/lib/libgensiocpp.la \
