Set version numbering for relevant libraries
The C++ one definitely needs a new version, and some discipline need to
be applied for the other libraries.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/glib/Makefile.am
+++ b/glib/Makefile.am
@@ -7,7 +7,8 @@ libgensioglib_la_SOURCES = gensio_glib.c
 libgensioglib_la_CFLAGS = $(GLIB_CFLAGS) $(AM_CFLAGS)
 libgensioglib_la_LIBADD = $(top_builddir)/lib/libgensio.la @OPENSSL_LIBS@ \
 	@GLIB_LIBS@
-libgensioglib_la_LDFLAGS = -no-undefined -rpath $(libdir)
+libgensioglib_la_LDFLAGS = -no-undefined -rpath $(libdir) \
+	-version-info 0:1:0
 
 SUBDIRS = . $(SWIG_DIR) include $(CPLUSPLUS_DIR)
 DIST_SUBDIRS = swig include c++
