c++:swig:go: Add go.mod to the repository
Don't make a new one every time.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/swig/go/gensio/Makefile.am
+++ b/c++/swig/go/gensio/Makefile.am
@@ -17,10 +17,9 @@ rawgensio_wrap.cxx rawgensio_wrap.h gensio.go: \
 		$(srcdir)/rawgensio.i
 
 
-go.mod: gensioapi.go gensio.go
+$(builddir)/go.mod: $(srcdir)/srcgo.mod gensioapi.go gensio.go
 	rm -f go.mod
-	go mod init $(GOMOD)
-	go mod tidy
+	cp $(srcdir)/srcgo.mod go.mod
 
 $(builddir)/gensioapi.go: $(srcdir)/srcgensioapi.go
 	cp $(srcdir)/srcgensioapi.go gensioapi.go
