--- a/c++/swig/go/gensio/Makefile.am
+++ b/c++/swig/go/gensio/Makefile.am
@@ -3,18 +3,18 @@ GOMOD = github.com/cminyard/go/gensio
 
 noinst_SCRIPTS = go.mod
 
-rawgensio_wrap.cxx rawgensio_wrap.h gensio.go: \
-			rawgensio.i $(top_srcdir)/c++/include/gensio \
+gensio_wrap.cxx gensio_wrap.h gensio.go: \
+			gensio.swigcxx $(top_srcdir)/c++/include/gensio \
 			$(top_srcdir)/c++/swig/include/gensio_base.i \
 			$(top_srcdir)/include/gensio/gensio_err.h \
 			$(top_srcdir)/include/gensio/gensio_control.h \
 			$(top_srcdir)/include/gensio/gensio_types.h
 	$(SWIG) $(DEFS) -Wall -go -intgosize 64 $(GO_SWIG_FLAGS) \
-		-o rawgensio_wrap.cxx -c++ \
+		-o gensio_wrap.cxx -c++ \
 		-I$(top_srcdir)/c++/swig/go -I$(top_srcdir)/c++/include \
 		-I$(top_srcdir)/include \
 		-I$(top_builddir)/include -I$(top_srcdir)/c++/swig/include \
-		$(srcdir)/rawgensio.i
+		$(srcdir)/gensio.swigcxx
 
 
 $(builddir)/go.mod: $(srcdir)/srcgo.mod gensioapi.go gensio.go
@@ -24,8 +24,8 @@ $(builddir)/go.mod: $(srcdir)/srcgo.mod gensioapi.go gensio.go
 $(builddir)/gensioapi.go: $(srcdir)/srcgensioapi.go
 	cp $(srcdir)/srcgensioapi.go gensioapi.go
 
-EXTRA_DIST = srcgensioapi.go rawgensio.i
+EXTRA_DIST = srcgensioapi.go gensio.swigcxx
 
 clean-local:
 	rm -rf gensioapi.go go.mod
-	rm -rf rawgensio_wrap.cxx rawgensio_wrap.h gensio.go
+	rm -rf gensio_wrap.cxx gensio_wrap.h gensio.go
