c++:swig:go: Add some better examples
Do the classic telnet client and server.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/swig/go/examples/Makefile.am
+++ b/c++/swig/go/examples/Makefile.am
@@ -1,10 +1,16 @@
 
-noinst_SCRIPTS = example
+noinst_SCRIPTS = example telnet_server telnet_client
 
 GOMOD = github.com/cminyard/go/gensio
 
 example.go: $(srcdir)/srcexample.go
 	cp $(srcdir)/srcexample.go example.go
+
+telnet_server.go: $(srcdir)/srctelnet_server.go
+	cp $(srcdir)/srctelnet_server.go telnet_server.go
+
+telnet_client.go: $(srcdir)/srctelnet_client.go
+	cp $(srcdir)/srctelnet_client.go telnet_client.go
 
 go.mod: example.go
 	rm -f go.mod
@@ -22,7 +28,20 @@ example: ../gensio/gensio.go \
 		example.go ../gensio/gensioapi.go go.mod
 	go build example.go
 
-EXTRA_DIST = srcexample.go
+telnet_server: ../gensio/gensio.go \
+		../gensio/gensio_wrap.cxx \
+		../gensio/gensio_wrap.h \
+		telnet_server.go ../gensio/gensioapi.go go.mod
+	go build telnet_server.go
+
+telnet_client: ../gensio/gensio.go \
+		../gensio/gensio_wrap.cxx \
+		../gensio/gensio_wrap.h \
+		telnet_client.go ../gensio/gensioapi.go go.mod
+	go build telnet_client.go
+
+EXTRA_DIST = srcexample.go srctelnet_server.go srctelnet_client.go
 
 clean-local:
-	rm -rf example example.go go.mod
+	rm -rf go.mod example example.go telnet_server telnet_server.go \
+		 telnet_client telnet_client.go
