cmake: Turn off glib support on windows
It doesn't currently work

Signed-off-by: Corey MInyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,8 @@ if(ENABLE_EPOLL)
   CHECK_INCLUDE_FILE(sys/epoll.h HAVE_EPOLL_PWAIT)
 endif()
 
-option(ENABLE_GLIB "Enable GLIB support" ON)
+# Currently only support glib on Unix
+option(ENABLE_GLIB "Enable GLIB support" ${UNIX})
 if(ENABLE_GLIB)
   pkg_check_modules(GLIB glib-2.0)
   if(GLIB_FOUND)
