tests: Fix runtest program
It was modified and didn't return the test's return code on an error.
This kept skipped tests from being registered properly.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/swig/go/tests/runtest.in
+++ b/c++/swig/go/tests/runtest.in
@@ -52,8 +52,10 @@ if ${PRINT_MODE}; then
 else
     # Run the test with each available OS handler
     export LD_LIBRARY_PATH="${LD_LIBRARY_PATH}"
-    if ! ${TEST} $*; then
+    ${TEST} $*
+    rv=$?
+    if test $rv != 0; then
         # A test failed, exit
-	exit 1
+	exit $rv
     fi
 fi
