--- a/c++/swig/pygensio/tests/runtest.in
+++ b/c++/swig/pygensio/tests/runtest.in
@@ -82,9 +82,11 @@ else
     for i in default @TCL_DIR@ @GLIB_DIR@; do
 	echo "Testing with '$i'"
 	export GENSIO_TEST_OS_HANDLER=$i
-	if ! ${RUNPREFIX} ${TEST} $*; then
+	${RUNPREFIX} ${TEST} $*
+	rv=$?
+	if test $rv != 0; then
 	    # A test failed, exit
-	    exit 1
+	    exit $rv
 	fi
     done
 fi
